--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <!-- this could be made into a main, or wrapped in a main to prevent adding it on every page, or add it in the layout.jsx file -->
     <div id="root"></div>
     <!--
       This HTML file is a template.
